Adiciona link do repositório do desafio 1

--- a/1-product-preview-card-component-main/index.html
+++ b/1-product-preview-card-component-main/index.html
@@ -48,10 +48,10 @@
 
   <footer class="footer">
     <span class="footer__copy">
-      Desafio do <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor.</a>
+      Desafio do <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noreferrer noopener">Frontend Mentor.</a>
     </span>
     <span class="footer__copy">
-      Codificado por <a href="#">Carla Santos</a>.
+      Codificado por <a href="https://github.com/carla-santos/frontend-mentor-desafios/tree/main/1-product-preview-card-component-main" target="_blank" rel="noreferrer noopener">Carla Santos</a>.
     </span>
   </footer>
 
